2016-11-07  Leopoldo Catania <leopoldo.catania@uniroma2.it>
	* DESCRIPTION (Version): New version is 0.1.5.
	* "snorm" is now the skew normal distribution
	reparametrized in terms of mean and standard deviation.
	In the previous "snorm" of version 0.1.4 there was also a
	bug in the unmapping function.
	* Bug correction for quantile function and cdf of "norm".
	* Bug correction for static optimization
2017-03-20   Leopoldo Catania <leopoldo.catania@uniroma2.it>
	* DESCRIPTION (Version): New version is 0.1.6.
	* New method residuals
	* New method summary
	* Test files corrected
	* The coef method for "uGASRoll", "mGASRoll", "uGASFit", "mGASFit"
 now accept the additional logical argument do.list (default do.list = FALSE)
	* The plot method now accepts the additional character argument "which" (default which = NULL)
	* The plot method now does not call dev.off()
	* Corrected bug in the plot method for objects mGASFit and mGASSim
	* Corrected bug for getMoments method for the mGASSim object
	* UniGASSim() and MultiGASSim() now accept an uGASFit and mGASFit object as principal argument
	* Corrected bug for information matrix in the sstd case
	* Bug correction for DistInfo("ast1")
	* The user can now provide her personal optimizer
	* mapping functions are now robust to numeric under/overflow
	* added warning for non positive definite hessian matrices
	* added documentation for the plot method
	* Added CITATION
2017-03-27   Leopoldo Catania <leopoldo.catania@uniroma2.it>
	* DESCRIPTION (Version): New version is 0.1.7.
	* some tests have been moved from /tests/ to /inst/ExtensionTests/
	* added registration of symbols
2017-03-29   Leopoldo Catania <leopoldo.catania@uniroma2.it>
	* DESCRIPTION (Version): New version is 0.1.8.
	* Bug fix in output of BacktestDensity()
2017-03-31   Leopoldo Catania <leopoldo.catania@uniroma2.it>
	* DESCRIPTION (Version): New version is 0.1.9.
	* some unit tests were removed due to issues related to testing with
	dev or patched R versions